# ARGoS_RL

./: .gitignore  .gitmodules  CMakeLists.txt
argos_worlds/: 4_way.argos  l_curve.argos  office_config.argos
msg/: Map.msg  State.msg
plugin/: CMakeLists.txt
plugin/tensor_swarm_bot/: CMakeLists.txt  ros_service_loop_function_CLARE.cpp  ros_service_loop_function_CLARE.h  tensor_swar_bot.cpp  tensor_swarm_CLARE_bot.cpp  tensor_swarm_CLARE_bot.h  tensor_swarm_bot.h
run/: 4_way_run_ppo.bash  L_curve_run_ppo.bash  killall.bash  office_config_run.bash
scripts/new/: ArgosMultiEnvironment.py  ArgosMultiProcessEnvironment.py  RunExperiment4Way.py  RunExperimentCLARE.py  RunExperimentLCurve.py  distributions.py  logger.py  policies.py  ppo2.py  tensorboard_logging.py  tf_util.py  utils.py
scripts/tensorforce_plugin/: ArgosEnvironment.py
srv/: AICLAREService.srv
